--- a/pom.xml
+++ b/pom.xml
@@ -42,4 +42,23 @@
             <version>4.5.14</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <rerunFailingTestsCount>1</rerunFailingTestsCount>
+<!--                    <testFailureIgnore>false</testFailureIgnore>-->
+<!--                    <argLine>-Dtest=testng-failed.xml</argLine>-->
+                    <suiteXmlFiles>
+                        <suiteXmlFile>src/test/resources/testing.xml</suiteXmlFile>
+                    </suiteXmlFiles>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
