--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,16 @@
             <version>4.5.14</version>
         </dependency>
         <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.12.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp-urlconnection</artifactId>
+            <version>4.12.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache-extras.beanshell</groupId>
             <artifactId>bsh</artifactId>
             <version>2.0b6</version>
@@ -51,17 +61,30 @@
     <build>
         <plugins>
             <plugin>
+                <!--                https://maven.apache.org/surefire/maven-surefire-plugin/examples/testng.html-->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0</version>
+                <version>3.1.2</version>
                 <configuration>
                     <rerunFailingTestsCount>1</rerunFailingTestsCount>
-<!--                    <testFailureIgnore>false</testFailureIgnore>-->
-<!--                    <argLine>-Dtest=testng-failed.xml</argLine>-->
+                    <!--                    <testFailureIgnore>false</testFailureIgnore>-->
+                    <!--                    <argLine>-Dtest=testng-failed.xml</argLine>-->
                     <suiteXmlFiles>
                         <suiteXmlFile>src/test/resources/testing.xml</suiteXmlFile>
                     </suiteXmlFiles>
                 </configuration>
+            </plugin>
+            <!-- Site Plugin -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
+                <version>3.21.0</version>
+            </plugin>
+            <!-- Dependency Plugin -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>3.6.1</version>
             </plugin>
         </plugins>
     </build>
