--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,12 @@
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>4.28.0</version>
+            <version>4.28.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-chrome-driver</artifactId>
+            <version>4.28.1</version>
         </dependency>
         <dependency>
             <groupId>org.json</groupId>
